[package]
name = "derr"
version = "0.1.0"
edition = "2024"

[dependencies]
const_format = { version = "0.2.34", features = ["fmt"] }
csv = "1.3.1"
rayon = "1.10.0"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tap = "1.0.1"
