[package]
name = "sentry-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
const_format = { version = "0.2.34", features = ["fmt"] }
csv = "1.3.1"
rayon = "1.10.0"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tap = "1.0.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
